--- a/back/package.json
+++ b/back/package.json
@@ -5,12 +5,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "forever-monitor": "^1.5.2",
     "jsonwebtoken": "^9.0.2"
   },
   "name": "back",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
