--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
     "axios": "^1.6.2",
+    "form": "^0.2.4",
+    "hook": "^0.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.0",
